chore: use jline ffm terminal implementation